overview prices issues with text wrapping v11.0

--- a/src/app/prices/overview-prices/overview-prices.component.css
+++ b/src/app/prices/overview-prices/overview-prices.component.css
@@ -44,6 +44,7 @@
 
 .table-with-dates-date-cell {
   padding-right: 10px;
+  width: max-content;
 }
 
 .table-with-prices-price-cell {
